[gd_scene load_steps=15 format=3 uid="uid://dw657paes4vsw"]

[ext_resource type="FontFile" uid="uid://bbvxijaalpggu" path="res://Assets/Fonts/Sparky Stones.ttf" id="1_7muv0"]
[ext_resource type="Script" path="res://Scripts/option.gd" id="1_udgxm"]
[ext_resource type="Texture2D" uid="uid://cbllvjuhlw6by" path="res://Assets/icon.svg" id="2_8tr1w"]
[ext_resource type="FontVariation" uid="uid://bew2by88w1jof" path="res://new_font_variation.tres" id="3_ti6ea"]
[ext_resource type="StyleBox" uid="uid://dbs72itvmpjnc" path="res://Assets/Tres/Controls_normal.tres" id="4_vl6pt"]
[ext_resource type="StyleBox" uid="uid://dcbsbdcr8i1ul" path="res://Assets/Tres/reset_button_normal.tres" id="5_clvqk"]
[ext_resource type="StyleBox" uid="uid://dpgkxj7bp0pwx" path="res://Assets/Tres/X_button.tres" id="6_h2wrl"]
[ext_resource type="StyleBox" uid="uid://dmixehx8ilo3d" path="res://Assets/Tres/X_button_Pressed.tres" id="7_72yv4"]
[ext_resource type="AudioStream" uid="uid://drhtwjsaw5jko" path="res://Assets/Soundtracks/button.wav" id="8_hv6ii"]

[sub_resource type="FontVariation" id="FontVariation_ok40q"]

[sub_resource type="FontVariation" id="FontVariation_w7vlv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5mqvu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_orw6i"]
bg_color = Color(0.368627, 0.0705882, 0.0823529, 0.996078)
border_width_left = 1
border_width_right = 1
border_width_bottom = 5
border_color = Color(0.25098, 0.0627451, 0.0588235, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.588235)
shadow_size = 2
shadow_offset = Vector2(1, 2)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2d8ed"]

[node name="Option_Node" type="CanvasLayer"]
visible = false
script = ExtResource("1_udgxm")

[node name="Option_container" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = 100.0
offset_right = -77.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.435294, 0.396078, 0.164706, 0.917647)
metadata/_edit_use_anchors_ = true

[node name="Labels" type="Control" parent="Option_container"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 0
offset_left = 457.0
offset_top = 123.0
offset_right = 667.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 30
text = "Game Settings"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 0
offset_left = 178.0
offset_top = 205.0
offset_right = 388.0
offset_bottom = 250.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 30
text = "Volume Settings"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label9" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 0
offset_left = 453.0
offset_top = 359.0
offset_right = 663.0
offset_bottom = 404.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 30
text = "Reset Highscore"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label10" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.03125
anchor_top = 0.00308642
anchor_right = -0.0208333
anchor_bottom = 0.00462963
offset_left = 116.0
offset_top = 528.0
offset_right = 286.0
offset_bottom = 552.0
theme_override_fonts/font = ExtResource("3_ti6ea")
theme_override_font_sizes/font_size = 15
text = "@ 2023 Odin's Adventure"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label11" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0208333
anchor_top = 0.00308642
anchor_right = -0.0112847
anchor_bottom = 0.00462963
offset_left = 290.0
offset_top = 528.0
offset_right = 460.0
offset_bottom = 552.0
theme_override_fonts/font = ExtResource("3_ti6ea")
theme_override_font_sizes/font_size = 15
text = "Carlo John Toledo Pabien"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label12" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00607639
anchor_top = 0.00308642
anchor_right = -0.00607639
anchor_bottom = 0.00462963
offset_left = 442.0
offset_top = 528.0
offset_right = 612.0
offset_bottom = 552.0
theme_override_fonts/font = ExtResource("3_ti6ea")
theme_override_font_sizes/font_size = 15
text = "All Rights Reserved"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label13" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00173611
anchor_top = 0.00308642
anchor_right = 0.0190972
anchor_bottom = 0.00462963
offset_left = 594.0
offset_top = 528.0
offset_right = 840.0
offset_bottom = 552.0
theme_override_fonts/font = ExtResource("3_ti6ea")
theme_override_font_sizes/font_size = 15
text = "toledocarlojohn.000webhostapp.com"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label14" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0182292
anchor_top = 0.00308642
anchor_right = 0.03125
anchor_bottom = 0.00462963
offset_left = 845.0
offset_top = 528.0
offset_right = 1033.0
offset_bottom = 552.0
theme_override_fonts/font = ExtResource("3_ti6ea")
theme_override_font_sizes/font_size = 15
text = "toledocarlojohn@gmail.com"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label15" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0572917
anchor_right = -0.0147569
anchor_bottom = 0.00154321
offset_left = 791.0
offset_top = 474.0
offset_right = 979.0
offset_bottom = 498.0
theme_override_fonts/font = SubResource("FontVariation_ok40q")
theme_override_font_sizes/font_size = 15
text = "Powered by: Godot v.4.1.1 Stable"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label16" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 0
offset_left = 959.0
offset_top = 488.0
offset_right = 1047.0
offset_bottom = 512.0
theme_override_fonts/font = SubResource("FontVariation_w7vlv")
theme_override_font_sizes/font_size = 11
text = "Game Engine"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label4" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 0
offset_left = 178.0
offset_top = 257.0
offset_right = 293.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 20
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label6" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0954861
anchor_top = 0.00462963
anchor_right = -0.0954861
anchor_bottom = 0.00462963
offset_left = 703.0
offset_top = 257.0
offset_right = 748.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 20
text = "Jump"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label8" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0859375
anchor_top = 0.00925926
anchor_right = -0.0859375
anchor_bottom = 0.00925926
offset_left = 857.0
offset_top = 258.0
offset_right = 902.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 20
text = "or"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label17" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0355903
anchor_top = 0.00925926
anchor_right = 0.0355903
anchor_bottom = 0.00925926
offset_left = 857.0
offset_top = 258.0
offset_right = 902.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 20
text = "or"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label19" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0694444
anchor_top = 0.0848765
anchor_right = -0.0694444
anchor_bottom = 0.0848765
offset_left = 857.0
offset_top = 258.0
offset_right = 902.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 20
text = "or"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label18" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0711806
anchor_top = 0.00925926
anchor_right = 0.138021
anchor_bottom = 0.00925926
offset_left = 857.0
offset_top = 258.0
offset_right = 902.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(0.513726, 0.737255, 0, 1)
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 20
text = "Tap the screen"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label20" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0303819
anchor_top = 0.0848765
anchor_right = 0.0364583
anchor_bottom = 0.0848765
offset_left = 857.0
offset_top = 258.0
offset_right = 902.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(0.513726, 0.737255, 0, 1)
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 20
text = "Tap the screen"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label7" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0946181
anchor_top = -0.0246914
anchor_right = -0.0946181
anchor_bottom = -0.0246914
offset_left = 703.0
offset_top = 326.0
offset_right = 749.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 20
text = "Down"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label5" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 0
offset_left = 178.0
offset_top = 312.0
offset_right = 324.0
offset_bottom = 334.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 20
text = "Sound FX Volume"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="Option_container/Labels"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0980903
anchor_right = -0.0980903
offset_left = 684.0
offset_top = 206.0
offset_right = 894.0
offset_bottom = 251.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 30
text = "Control Setup"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Option_container/Labels"]
top_level = true
position = Vector2(1002, 461)
scale = Vector2(0.508685, 0.508789)
texture = ExtResource("2_8tr1w")

[node name="Sliders" type="Control" parent="Option_container"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Master" type="HSlider" parent="Option_container/Sliders"]
visible = false
top_level = true
layout_mode = 0
offset_left = 175.0
offset_top = 277.0
offset_right = 422.0
offset_bottom = 293.0
value = 50.0

[node name="Musicvol" type="HSlider" parent="Option_container/Sliders"]
top_level = true
layout_mode = 0
offset_left = 175.0
offset_top = 277.0
offset_right = 422.0
offset_bottom = 293.0
tooltip_text = "Slide to adjust the Music Volume."
min_value = -24.0
max_value = 0.0
metadata/_edit_use_anchors_ = true

[node name="Soundfxvol" type="HSlider" parent="Option_container/Sliders"]
top_level = true
layout_mode = 0
offset_left = 175.0
offset_top = 333.0
offset_right = 421.0
offset_bottom = 349.0
tooltip_text = "Slide to adjust the Sound Effects Volume."
min_value = -24.0
max_value = 0.0
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="Control" parent="Option_container"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Option_container/Buttons"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0885417
anchor_top = 0.00154321
anchor_right = -0.0885417
anchor_bottom = 0.00154321
offset_left = 762.0
offset_top = 252.0
offset_right = 859.0
offset_bottom = 287.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_styles/normal = ExtResource("4_vl6pt")
theme_override_styles/hover = ExtResource("4_vl6pt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5mqvu")
text = "space bar"
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="Option_container/Buttons"]
top_level = true
layout_mode = 0
offset_left = 509.0
offset_top = 408.0
offset_right = 606.0
offset_bottom = 450.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_styles/normal = ExtResource("5_clvqk")
theme_override_styles/hover = ExtResource("5_clvqk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_orw6i")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5mqvu")
text = "Reset"
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="Option_container/Buttons"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0842014
anchor_top = 0.00308642
anchor_right = -0.0842014
anchor_bottom = 0.00308642
offset_left = 900.0
offset_top = 252.0
offset_right = 927.0
offset_bottom = 287.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_styles/normal = ExtResource("4_vl6pt")
theme_override_styles/hover = ExtResource("4_vl6pt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5mqvu")
text = "Up Arrow Key"
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="Option_container/Buttons"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0876736
anchor_top = -0.0262346
anchor_right = -0.0876736
anchor_bottom = -0.0262346
offset_left = 761.0
offset_top = 321.0
offset_right = 788.0
offset_bottom = 356.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_styles/normal = ExtResource("4_vl6pt")
theme_override_styles/hover = ExtResource("4_vl6pt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5mqvu")
text = "Down Arrow Key"
metadata/_edit_use_anchors_ = true

[node name="Button5" type="Button" parent="Option_container/Buttons"]
top_level = true
layout_mode = 0
offset_left = 1005.0
offset_top = 110.0
offset_right = 1058.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("1_7muv0")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("6_h2wrl")
theme_override_styles/hover = ExtResource("6_h2wrl")
theme_override_styles/pressed = ExtResource("7_72yv4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2d8ed")
text = "X"

[node name="Sound" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("8_hv6ii")
volume_db = -2.0

[connection signal="value_changed" from="Option_container/Sliders/Musicvol" to="." method="_on_musicvol_value_changed"]
[connection signal="value_changed" from="Option_container/Sliders/Soundfxvol" to="." method="_on_soundfxvol_value_changed"]
[connection signal="pressed" from="Option_container/Buttons/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Option_container/Buttons/Button5" to="." method="_on_button_5_pressed"]
